--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,12 @@
+#root .homeHeader{
+	height: 150px;
+}
+#root .homeHeader h1{
+	font-size: 3em;
+	color: white;
+	margin: 0 auto;
+}
+
 
 .listRow label.fieldName {
 	clear: left;
@@ -17,8 +26,16 @@
 .listRow div.ui-input-text input{
 	text-align: right;
 }
-/*******overrite***/
 
+.actionBtn{
+}
+/*******overrite***/
+.ui-header{
+	background-color: #76EEC6 !important;
+}
+.ui-title{
+	color: white !important;
+}
 .ui-listview>.ui-li-static{
 	padding-top: 0px;
 	padding-bottom: 0px;
