--- a/css/app.css
+++ b/css/app.css
@@ -7,6 +7,15 @@
 	margin: 0 auto;
 }
 
+.homeItem{
+	height: 70px;
+	border:#76EEC6 5px solid; 
+	text-align: center;
+	margin-bottom: 10px;
+	padding-top: 20px;
+	color: black;
+	font-size: 2em;
+}
 
 .listRow label.fieldName {
 	clear: left;
@@ -31,10 +40,11 @@
 }
 /*******overrite***/
 .ui-header{
-	background-color: #76EEC6 !important;
+	background-color: #76EEC6 !important;8*
 }
 .ui-title{
 	color: white !important;
+	font-weight: normal;
 }
 .ui-listview>.ui-li-static{
 	padding-top: 0px;
